NeuralAmpModeler changelog
www.acmeinc.com

00/00/0000 - v0.5.5 Tweak UI