@@ -10,7 +10,60 @@
 using namespace iplug;
 using namespace igraphics;
 
-const IColor COLOR_MOUSEOVER = COLOR_GREEN.WithOpacity(0.3);
+// COLORS!
+const IColor COLOR_OFF_WHITE(255, 243, 246, 249);  // Maeterial UI because Heidi said so
+
+// From group photo
+//const IColor COLOR_NAM_5(255, 206, 194, 224);  // Languid Lavendar
+//const IColor COLOR_NAM_4(255, 30, 30, 39);  // Raisin Black
+//const IColor COLOR_NAM_3(255, 48, 43, 96);  // Space Cadet
+//const IColor COLOR_NAM_2(255, 3, 2, 1);  // Black
+//const IColor COLOR_NAM_1(255, 18, 15, 18);  // Smoky Black
+
+// Blue palette "Microsoft"
+//const IColor COLOR_NAM_1(255, 13, 27, 42);  // Black Fogra 29
+//const IColor COLOR_NAM_2(255, 27, 38, 59);  // Oxford Blue
+//const IColor COLOR_NAM_3(255, 65, 90, 119);  // Bedazzled Blue
+//const IColor COLOR_NAM_4(255, 119, 141, 169);  // Shadow Blue
+//const IColor COLOR_NAM_5(224, 225, 221, 224);  // Platinum
+
+// Dark theme
+//const IColor COLOR_NAM_1(255, 26, 20, 35);  // Xiketic
+//const IColor COLOR_NAM_2(255, 55, 37, 73);  // Dark Purple
+//const IColor COLOR_NAM_3(255, 119, 76, 96);  // Twilight Lavendar
+//const IColor COLOR_NAM_4(255, 183, 93, 105);  // Popstar
+//const IColor COLOR_NAM_5(224, 234, 205, 194);  // Unbleached Silk
+
+//const IColor COLOR_MOUSEOVER = COLOR_NAM_5.WithOpacity(0.3);
+
+// My 3 colors (purple)
+//const IColor COLOR_NAM_1(255, 18, 17, 19);  // Smoky Black
+//const IColor COLOR_NAM_2(255, 115, 93, 120);  // Old Lavendar
+//const IColor COLOR_NAM_3(255, 189, 185, 196);  // Lavendar Gray
+//const IColor COLOR_NAM_2(255, 34, 39, 37);  // Charleston Green
+//const IColor COLOR_NAM_2(255, 114, 161, 229);  // Little Boy Blue
+//const IColor COLOR_NAM_3(255, 247, 247, 242);  // Baby Powder
+//const IColor COLOR_NAM_3(255, 230, 220, 249);  // Pale Purple Pantone
+//const IColor COLOR_NAM_3(255, 218, 203, 246);  // Lavender Blue
+
+//Blue mode
+//const IColor COLOR_NAM_1(255, 18, 17, 19);  // Smoky Black
+const IColor COLOR_NAM_1(255, 29, 26, 31);  // Raisin Black
+//const IColor COLOR_NAM_2(255, 126, 188, 230);  // Camel
+//const IColor COLOR_NAM_2(255, 152, 202, 235);  // Pale Cerulean
+//const IColor COLOR_NAM_2(255, 46, 116, 163);  // French Blue
+//const IColor COLOR_NAM_2(255, 80, 171, 232);  // Blue Jeans
+const IColor COLOR_NAM_2(255, 80, 133, 232);  // Azure
+//const IColor COLOR_NAM_3(255, 189, 185, 196);  // Aero
+//const IColor COLOR_NAM_3(255, 221, 237, 248);  // Alice Blue
+//const IColor COLOR_NAM_3(255, 207, 220, 229);  // Beau Blue
+//const IColor COLOR_NAM_3(255, 187, 199, 208);  // Silver Sand
+const IColor COLOR_NAM_3(255, 162, 178, 191);  // Cadet Blue Crayola
+
+
+const IColor COLOR_MOUSEOVER = COLOR_NAM_3.WithOpacity(0.3);
+
+const IColor COLOR_HELP_TEXT = COLOR_WHITE;
 
 class IRolloverSVGButtonControl : public ISVGButtonControl
 {
@@ -65,9 +118,6 @@ NeuralAmpModeler::NeuralAmpModeler(const InstanceInfo& info)
 {
   GetParam(kInputGain)->InitGain("Input", 0.0, -20.0, 20.0, 0.1);
   GetParam(kOutputGain)->InitGain("Output", 0.0, -20.0, 20.0, 0.1);
-  GetParam(kParametricDrive)->InitDouble("Drive", 0.5, 0.0, 1.0, 0.01);
-  GetParam(kParametricLevel)->InitDouble("Level", 0.5, 0.0, 1.0, 0.01);
-  GetParam(kParametricTone)->InitDouble("Tone", 0.5, 0.0, 1.0, 0.01);
 
   try {
      mDSP = get_hard_dsp();
@@ -100,18 +150,18 @@ NeuralAmpModeler::NeuralAmpModeler(const InstanceInfo& info)
       true, // Show label
       true, // Show value
       {
-        DEFAULT_BGCOLOR, // Background
-        COLOR_GREEN.WithOpacity(0.2), // Foreground
-        COLOR_GREEN.WithOpacity(0.4), // Pressed
-        COLOR_LIGHT_GRAY, // Frame
+        DEFAULT_BGCOLOR,  //COLOR_NAM_1,  //DEFAULT_BGCOLOR, // Background
+        COLOR_NAM_1,  // .WithOpacity(0.5), // Foreground
+        COLOR_NAM_2.WithOpacity(0.4),  // .WithOpacity(0.4), // Pressed
+        COLOR_NAM_3, // Frame
         COLOR_MOUSEOVER, // Highlight
         DEFAULT_SHCOLOR, // Shadow
-        COLOR_GREEN, // Extra 1
+        COLOR_NAM_2 , // Extra 1
         COLOR_RED, // Extra 2
         DEFAULT_X3COLOR  // Extra 3
       }, // Colors
-      {DEFAULT_TEXT_SIZE + 5.f, EVAlign::Middle, COLOR_WHITE},
-      {DEFAULT_TEXT_SIZE + 5.f, EVAlign::Bottom, COLOR_WHITE},
+      {DEFAULT_TEXT_SIZE + 5.f, EVAlign::Middle, COLOR_NAM_3},  // Knob label text
+      {DEFAULT_TEXT_SIZE + 5.f, EVAlign::Bottom, COLOR_NAM_3},  // Knob value text
       DEFAULT_HIDE_CURSOR,
       DEFAULT_DRAW_FRAME,
       false,
@@ -123,12 +173,13 @@ NeuralAmpModeler::NeuralAmpModeler(const InstanceInfo& info)
       DEFAULT_WIDGET_ANGLE
     };
     
-    auto tolexPNG = pGraphics->LoadBitmap(TOLEX_FN);
-    pGraphics->AttachControl(new IBitmapControl(pGraphics->GetBounds(), tolexPNG, kNoParameter))->SetBlend(IBlend(EBlend::Default, 0.5));
-    pGraphics->AttachControl(new IVPanelControl(mainArea, "", style.WithColor(kFG, COLOR_GREEN.WithContrast(-0.75))));
+    //auto tolexPNG = pGraphics->LoadBitmap(TOLEX_FN);
+    //pGraphics->AttachControl(new IBitmapControl(pGraphics->GetBounds(), tolexPNG, kNoParameter))->SetBlend(IBlend(EBlend::Default, 0.5));
+    // The background inside the outermost border
+    pGraphics->AttachControl(new IVPanelControl(mainArea, "", style.WithColor(kFG, COLOR_NAM_1)));  // .WithContrast(-0.75)
     pGraphics->AttachControl(new IVLabelControl(titleLabel, "Neural Amp Modeler", style
                                                 .WithDrawFrame(false)
-                                                .WithValueText({30, EAlign::Center, COLOR_WHITE})));
+                                                .WithValueText({30, EAlign::Center, COLOR_NAM_3})));
 
 //    pGraphics->AttachControl(new IVBakedPresetManagerControl(modelArea, style.WithValueText({DEFAULT_TEXT_SIZE, EVAlign::Middle, COLOR_WHITE})));
 
@@ -141,46 +192,44 @@ NeuralAmpModeler::NeuralAmpModeler(const InstanceInfo& info)
       });
     };
     
-    pGraphics->AttachControl(new IVPanelControl(modelArea, "", style.WithColor(kFG, COLOR_YELLOW.WithContrast(-0.75))));
+    // Tells us what model is loaded
+    pGraphics->AttachControl(new IVPanelControl(modelArea, "", style.WithColor(kFG, COLOR_NAM_1)));  // .WithContrast(-0.75)
     pGraphics->AttachControl(new IRolloverSVGButtonControl(modelArea.GetFromLeft(30).GetPadded(-2.f), loadModel, folderSVG));
     pGraphics->AttachControl(new IVUpdateableLabelControl(modelArea.GetReducedFromLeft(30), "Default model", style.WithDrawFrame(false).WithValueText(style.valueText.WithVAlign(EVAlign::Middle))), kCtrlTagModelName);
     
     pGraphics->AttachControl(new IVKnobControl(knobs.GetGridCell(0, 0, 1, kNumParams).GetPadded(-10), kInputGain, "", style));
     pGraphics->AttachControl(new IVKnobControl(knobs.GetGridCell(0, 1, 1, kNumParams).GetPadded(-10), kOutputGain, "", style));
-    pGraphics->AttachControl(new IVKnobControl(knobs.GetGridCell(0, 2, 1, kNumParams).GetPadded(-10), kParametricTone, "", style))->SetDisabled(true);
-    pGraphics->AttachControl(new IVKnobControl(knobs.GetGridCell(0, 3, 1, kNumParams).GetPadded(-10), kParametricDrive, "", style))->SetDisabled(true);
-    pGraphics->AttachControl(new IVKnobControl(knobs.GetGridCell(0, 4, 1, kNumParams).GetPadded(-10), kParametricLevel, "", style))->SetDisabled(true);
 
     pGraphics->AttachControl(new IVPeakAvgMeterControl(meterArea, "", style.WithWidgetFrac(0.5)
                                                        .WithShowValue(false)
-                                                       .WithColor(kFG, COLOR_GREEN), EDirection::Horizontal, {}, 0, -60.f, 12.f, {}), kCtrlTagMeter)
+                                                       .WithColor(kFG, COLOR_NAM_2), EDirection::Horizontal, {}, 0, -60.f, 12.f, {}), kCtrlTagMeter)
     ->As<IVPeakAvgMeterControl<>>()->SetPeakSize(2.0f);
 
     pGraphics->AttachControl(new IVAboutBoxControl(
     new IRolloverCircleSVGButtonControl(mainArea.GetFromTRHC(50, 50).GetCentredInside(20, 20), DefaultClickActionFunc, helpSVG),
     new IPanelControl(IRECT(),
 //    COLOR_LIGHT_GRAY,
-    IPattern::CreateLinearGradient(b, EDirection::Vertical, { {COLOR_WHITE, 0.f}, {COLOR_BLACK, 1.f} }),
+    IPattern::CreateLinearGradient(b, EDirection::Vertical, { {COLOR_NAM_3, 0.f}, {COLOR_NAM_1, 1.f} }),
     false, // draw frame
     // AttachFunc
     [style](IContainerBase* pParent, const IRECT& r) {
-      pParent->AddChildControl(new IVPanelControl(IRECT(), "", style.WithColor(kFR, COLOR_BLACK).WithColor(kFG, COLOR_LIGHT_GRAY.WithOpacity(-0.75))));
+      pParent->AddChildControl(new IVPanelControl(IRECT(), "", style.WithColor(kFR, COLOR_NAM_3.WithOpacity(0.1)).WithColor(kFG, COLOR_NAM_1.WithOpacity(0.1))));
 
       pParent->AddChildControl(new IVLabelControl(IRECT(), "Neural Amp Modeler", style
                                                   .WithDrawFrame(false)
-                                                  .WithValueText({30, EAlign::Center, COLOR_BLACK})));
+                                                  .WithValueText({30, EAlign::Center, COLOR_HELP_TEXT})));
       
       WDL_String versionStr {"Version "};
       versionStr.Append(PLUG_VERSION_STR);
       pParent->AddChildControl(new IVLabelControl(IRECT(), versionStr.Get(), style
                                                   .WithDrawFrame(false)
-                                                  .WithValueText({DEFAULT_TEXT_SIZE, EAlign::Center, COLOR_BLACK})));
+                                                  .WithValueText({DEFAULT_TEXT_SIZE, EAlign::Center, COLOR_HELP_TEXT })));
       pParent->AddChildControl(new IVLabelControl(IRECT(), "By Steven Atkinson", style
                                                   .WithDrawFrame(false)
-                                                  .WithValueText({DEFAULT_TEXT_SIZE, EAlign::Center, COLOR_BLACK})));
+                                                  .WithValueText({DEFAULT_TEXT_SIZE, EAlign::Center, COLOR_HELP_TEXT})));
       pParent->AddChildControl(new IURLControl(IRECT(),
                                                 "Train your own model",
-                                                "https://github.com/sdatkinson/neural-amp-modeler", {DEFAULT_TEXT_SIZE, COLOR_BLACK}));
+                                                "https://github.com/sdatkinson/neural-amp-modeler", {DEFAULT_TEXT_SIZE, COLOR_HELP_TEXT }));
     },
     // ResizeFunc
     [](IContainerBase* pParent, const IRECT& r) {
