@@ -1,10 +1,10 @@
 #define PLUG_NAME "NeuralAmpModeler"
-#define PLUG_MFR "StevenAtkinson"
-#define PLUG_VERSION_HEX 0x00000505
-#define PLUG_VERSION_STR "0.5.5"
+#define PLUG_MFR "Steven Atkinson"
+#define PLUG_VERSION_HEX 0x00000506
+#define PLUG_VERSION_STR "0.5.6"
 #define PLUG_UNIQUE_ID '1YEo'
 #define PLUG_MFR_ID 'SDAa'
-#define PLUG_URL_STR "https://github.com/olilarkin/NeuralAmpModeler"
+#define PLUG_URL_STR "https://github.com/sdatkinson/NeuralAmpModelerPlugin"
 #define PLUG_EMAIL_STR "spam@me.com"
 #define PLUG_COPYRIGHT_STR "Copyright 2022 Steven Atkinson"
 #define PLUG_CLASS_NAME NeuralAmpModeler
