@@ -5,7 +5,7 @@ AppCopyright=Copyright (C) 2020 MANUFACTURER
 AppPublisher=MANUFACTURER
 AppPublisherURL=http://www.spam.com
 AppSupportURL=http://www.spam.com
-AppVersion=0.5.5
+AppVersion=0.5.6
 VersionInfoVersion=1.0.0
 DefaultDirName={pf}\NeuralAmpModeler
 DefaultGroupName=NeuralAmpModeler
