@@ -1,4 +1,1 @@
-NeuralAmpModeler changelog
-www.acmeinc.com
-
-00/00/00 - v1.00 initial release
+For known issues, see https://github.com/sdatkinson/NeuralAmpModelerPlugin/issues.
