@@ -1,10 +1,11 @@
 # Neural Amp Modeler Plug-in
 
-A VST3/AudioUnit plug-in* for [Neural Amp Modeler](https://github.com/sdatkinson/neural-amp-modeler), built with [iPlug2](https://iplug2.github.io).
+A VST3/AudioUnit plug-in\* for [Neural Amp Modeler](https://github.com/sdatkinson/neural-amp-modeler), built with [iPlug2](https://iplug2.github.io).
 
-* https://www.youtube.com/user/RunawayThumbtack
-* https://github.com/sdatkinson/neural-amp-modeler
+- https://www.youtube.com/user/RunawayThumbtack
+- https://github.com/sdatkinson/neural-amp-modeler
 
-This is a cleaned up version of [this repo](https://github.com/sdatkinson/iPlug2) to show the original authors a better way of doing their iPlug2 project :-)
+This is a cleaned up version of [the original iPlug2-based NAM plugin](https://github.com/sdatkinson/iPlug2) with some refactoring to adopt better practices recommended by the developers of iPlug2.
+(Thanks [Oli](https://github.com/olilarkin) for your generous suggestions!)
 
-* could also support VST2, AAX, CLAP, Linux, iOS soon
+\*could also support VST2, AAX, CLAP, Linux, iOS soon.
