@@ -1,4 +1,5 @@
 NeuralAmpModeler changelog
-www.acmeinc.com
+https://github.com/sdatkinson/NeuralAmpModelerPlugin
 
 00/00/0000 - v0.5.5 Tweak UI
+12/10/2022 - v0.5.6 Tweak UI
